# ctrl

./: .gitignore  Architecture  CLI.txt  Cargo.toml  LICENSE  README.md  scratch.rs
.cargo/: config.toml  linux_cross_build_config.toml
.devcontainer/: Dockerfile  devcontainer.json
.devcontainer.sample/: Dockerfile  devcontainer.json
.github/workflows/: cargo_release.yml  release.yml  rust.yml
.vscode.sample/: launch.json
assets/: dotfiles.toml  sample.md
cfg/: ctrl.toml
scripts/: patch_android_ndk_libgcc.sh  patch_android_ndk_toolchain.sh
src/: TODO.txt  cfg.rs  command.rs  file.rs  log.rs  main.rs  maintain.rs  me.rs  package.rs  pkg.rs  release.rs  self_update.rs
src/config/: ctrl.toml
src/package/: apt.rs  aptget.rs  dnf.rs  homebrew.rs  pacman.rs  scoop.rs  winget.rs
src/pkg/: homebrew.rs  winget.rs
