[package]
name = "ctrl"
version = "0.3.0"
edition = "2021"
description = "CLI tool for cross platform OS management"
categories = ["command-line-interface"]

[dependencies]
clap = { version = "^3", features = ["derive"] }
config = { version = "^0" }
dialoguer = { version = "^0" }
indicatif = { version = "^0" }
log = { version = "^0", features = ["std"] }
openssl = { version = "^0", features = ["vendored"] }
reqwest = { version = "^0" }
self_update = { version = "^0" }
serde = { version = "^1", features = ["derive"] }
simple_logger = { version = "^2" }
version-compare = { version = "^0" }
which = { version = "^4"}
